# dowe-lsp

./: .gitignore  Cargo.toml  README.md  extension.toml
crates/language_server/: Cargo.toml
crates/language_server/src/: conversion.rs  main.rs  protocol.rs  server.rs  uri.rs
scripts/: bootstrap-grammar-repo.sh  check.sh  prepare-publish.sh
src/: lib.rs
tree-sitter-dowe/: grammar.js  tree-sitter.json
tree-sitter-dowe/src/: grammar.json  node-types.json  parser.c
tree-sitter-dowe/test/corpus/: views.txt
