[package]
name = "dowe-lsp-zed-extension"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"

[workspace]
members = [
  "crates/language_server",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
dowe_compiler = { path = "../dowe/crates/compiler" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
